--- a/index.html
+++ b/index.html
@@ -642,8 +642,9 @@
                 <div class="info-item" data-aos="fade" data-aos-delay="300">
                   <i class="bi bi-telephone"></i>
                   <h3>Call Us</h3>
-                 <a href="tel:+917045685914"> <p>+91 70456 85914</p></a>
-                  
+                 <a href="tel:+917045685914"> <p>+91 7045685914</p></a>
+                  <a href="tel:+919371314224"> <p>+91 9371314224</p></a>
+          
                 </div>
               </div><!-- End Info Item -->
 
